public/css/style.css
/* ... */
/* #navTitle {
  font-family: "Inconsolata", monospace;
  align-self: center;
  color: #ce1717;
  font-size: 1.6em;
  font-weight: 500;
} */

#navTitle {
  font-family: "Inconsolata", monospace;
  align-self: center;
  font-size: 1.6em;
  font-weight: 500;
  display: flex;
  width: 28px;
  margin: 0;
  padding: 0;
  height: 28px;
  justify-content: center;
  align-items: center;
  border-radius: 6px;
  padding-bottom: 5px;
}

#sweetLogo {
  width: 30px;
  height: 30px;
}

#sweetLogoLink {
  line-height:30px;
  position: relative;
  top: 2px;
}

#navbarProfileImage {
  width: 30px;
  height: 30px;
  border-radius: 6px;
  border: 1px solid transparent;
}

.screenreader-text {
  display: none;
}

#navTitle a {
  text-decoration: none;
}

.navbar-group {
  display: flex;
}
#navbarLeftGroup {
  justify-content: flex-start;
  flex: 1;
}
#navbarLeftGroup .nav-item:not(:last-child) {
  padding-right: 2rem;
}
#navbarCentreGroup {
  justify-content: center;
}
#navbarRightGroup {
  justify-content: flex-end;
  flex: 1;
}
#navbarRightGroup .nav-item:not(:last-of-type) {
  padding-right: 2rem;
}
#navbarRightGroup .nav-item {
  padding-right: 8px;
}

#navbarMenuMobile {
  justify-content: space-between;
  width: 100%;
}

#navbarMenuDesktop {
  display: none;
  justify-content: space-around;
  margin: 0 auto;
  width: 1110px;
}

@media (min-width: 576px) {
  #navbarMenuMobile {
    display: none;
  }
  #navbarMenuDesktop {
    display: inline-flex;
  }
}

#navbarMenuDesktop .nav-link,
#navbarMenuMobile .nav-link {
  font-size: 20px;
  padding: 0;
}

#topNav .nav-item,
#topNav .nav-link {
  display: flex;
  align-items: center;
}

#topNav .nav-link,
#topNav .nav-link:visited,
#topNav .nav-link:active,
#notificationsDropdownLink {
  text-decoration: none;
}

#topNav .dropdown-toggle::after {
  display: none !important;
}

#topNav .dropdown-item {
    font-size: 90%;
}



.navbar-username,
.nav-link-text {
  display: none;
  font-size: 1rem;
  margin-left: 8px;
  font-family: 'Inconsolata', monospace;
}

@media (min-width: 839px) {
  .navbar-username,
  .nav-link-text {
    display: inline;
  }
}

/* @media (min-width: 992px) { ... } */



.notifications-count {
  font-size: 0.5em;
  position: absolute;
  top: 6px;
  left: 7px;
}

#bodyContainer .intro {
  text-align: center;
}

.userForm {
  max-width: 380px;
  padding: 1em;
  border-radius: 4px;
  margin: 1em auto;
  /*border property moved to colors section*/
}

.userForm h2 {
  text-align: center;
}

/* .userForm .form-control {
    width: 100%;
    height: 2.5em;
    border-radius: 5px;
    border: 1px solid #cbcbcb;
    margin-bottom: 1em;
    padding: 5px 10px;
    box-sizing: border-box;
} */
/*
.userForm button {
    width: 100%;
    border: 0;
    background: #175cf4;
    padding: 5px;
    height: 2.5em;
    border-radius: 5px;
    color: white;
    font-weight: lighter;
    text-transform: uppercase;
} */


#userHeader {
  display: flex;
  justify-content: space-between;
}

/* a, a:visited, a:active {
  color: #175cf4;
} */

#topPostControlsRow,
#bottomPostControlsRow {
  display: none;
  justify-content: space-between;
  align-items: center;
}

#replyControlsRow {
  justify-content: space-between;
  align-items: center;
}

#resultsContainer,
#directoryResults,
.commentsList {
  /*border moved to colors section*/
  padding: 0;
}

.commentContainer {
	/* background: #fafafa; */
	/* border-radius: 5px; */
	padding: 15px;
	/* margin-bottom: 10px; */
	/*border moved to colors section*/
  padding-bottom: 0px;
}

#postForm {
  padding: 15px;
  /*border moved to colors section*/
}

@media (max-width: 768px) {
  #homeBody,
  #userBody {
    margin: 0;
  }
  #homeBody>div,
  #userBody>div {
    padding: 0;
  }
}

.content-box {
  padding: 15px;
  /*border moved to colors section*/
  padding-bottom: 0px;
}

.commentContent {
    overflow: hidden;
    word-wrap: break-word;
}

.commentMetadata {
  padding-bottom: 10px;
}

.replyContainer {
    display: none;
    /* border-top: 1px solid #e7e7e7; */
    /* margin-top: 10px; */
    padding-top: 0px;
    padding-bottom: 10px;
}

.replyForm {
  padding: 0 15px 10px 15px;
}

.repliesContainer {
	font-size: 0.9em;
	padding-left:5px;
  /*border moved to colors section*/
  padding-top: 20px;
  padding-left: 20px;
  padding-right: 20px;
}

.individualReplyContainer {
    word-wrap: break-word;
}

.user-list {
    padding: 0;
    margin: 0 0 10px 0;
    list-style: none;
    display: flex;
    justify-content: flex-start;
    flex-wrap: wrap;
}

.user-list li {
    display: inline-block;
    /*border moved to colors section*/
    padding: 5px;
    border-radius: 5px;
    margin: 2px;
}

.user-list img {
  width: 30px;
  height: 30px;
  border-radius: 4px;
  margin: 2px;
}

.btn-group-full-width {
  display: flex;
}

.btn-group-full-width .btn {
  flex: 1
}

/* IMAGE UPLOAD FORM */


#image-preview {
  width: 260px;
  height: 260px;
  position: relative;
  overflow: hidden;
	border-radius: 5px;
	/*border moved to colors section*/
}
#image-preview input {
  line-height: 260px;
  font-size: 260px;
  position: absolute;
  opacity: 0;
  z-index: 10;
}
#image-preview label {
  position: absolute;
  z-index: 5;
  opacity: 0.8;
  cursor: pointer;
  width: 200px;
  height: 50px;
  font-size: 20px;
  line-height: 50px;
  text-transform: uppercase;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: auto;
  text-align: center;
	border-radius: 5px;
}

.page-header {
   border-bottom:2px solid #ce1717;
   padding-bottom:10px;
   margin-bottom:20px;
}

#profileImageContainer {
    display: flex;
    width: 150px;
    position: relative;
}

#profileImage {
  width: 150px;
  height: 150px;
  border-radius: 10px;
  /* border-radius: 50%; */
}

#updateImage {
    position: absolute;
    bottom: 22px;
    right: 8px;
}

.postAuthorImage {
  width: 46px;
  height: 46px;
  border-radius: 5px;
  display: inline;
  margin-right: 5px;
}

@media (min-width: 576px) {
  #notificationsContainer {
      min-width: 360px;
  }
}
/* ... */

